checking render
