# swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "My API",
-    "description": "Temple API",
+    "description": "User API",
     "version": "1.0.0"
   },
   "host": "localhost:3000",
@@ -11,6 +11,26 @@
     "http"
   ],
   "paths": {
+    "/login": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/api-docs": {
       "get": {
         "description": "",
@@ -71,6 +91,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -114,6 +137,9 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -129,38 +155,40 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "The ID of the user to update"
           },
           {
             "name": "body",
             "in": "body",
             "required": true,
+            "description": "User object that needs to be updated",
             "schema": {
               "type": "object",
               "properties": {
                 "name": {
                   "type": "string",
-                  "example": "any"
+                  "description": "User's new name"
                 },
                 "email": {
                   "type": "string",
-                  "example": "any"
+                  "description": "User's new email"
                 },
                 "role": {
                   "type": "string",
-                  "example": "any"
+                  "description": "User's new role"
                 },
                 "active": {
                   "type": "boolean",
-                  "example": "any"
+                  "description": "Whether the user is active"
                 },
                 "photo": {
                   "type": "string",
-                  "example": "any"
+                  "description": "URL of the user's new photo"
                 },
                 "password": {
                   "type": "string",
-                  "example": "any"
+                  "description": "User's new password"
                 }
               }
             }
@@ -172,6 +200,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
